<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.example.asus.listview_kevin_ortiz.Triangulo">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/triangulo"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:text="@string/text_ingr_val_rect"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_val_trian_bas"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.02">

        <TextView
            android:id="@+id/textView00"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:text="@string/text_ingr_val_rect2"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_val_trian_alt"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cal_cua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Calcular_Area_Trian"
            android:text="@string/calcular"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_lim_cua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="borrar"
            android:text="@string/borrar"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>